baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_variant_alias/baml_tests__diagnostic_errors__duplicate_variant_alias__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
enum user.AliasEqualsOwnName {A, B}
enum user.AliasVsAlias {A, B}
enum user.AllDistinct {A, B, C}
enum user.CaseSensitive {Value, Other}
enum user.NameVsAlias {Shared, B}
enum user.NormalizedCollision {A, B}
enum user.SkippedDoesNotCollide {A, B}
enum user.TripleCollision {First, Second, Shared}
