baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_variant_alias/baml_tests__diagnostic_errors__duplicate_variant_alias__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.AliasVsAlias
enum user.NameVsAlias
enum user.TripleCollision
enum user.NormalizedCollision
enum user.AliasEqualsOwnName
enum user.SkippedDoesNotCollide
enum user.AllDistinct
enum user.CaseSensitive
